--- a/DashWallet/dashwallet.entitlements
+++ b/DashWallet/dashwallet.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.dashfoundation.dash</string>
+		<string>group.com.genitrust.wallofcoins</string>
 	</array>
 </dict>
 </plist>
