--- a/DashWallet/dashwalletTodayExtension.entitlements
+++ b/DashWallet/dashwalletTodayExtension.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.dashfoundation.dash</string>
+		<string>group.genitrust.wallofcoins</string>
 	</array>
 </dict>
 </plist>
